tests/fails/f0.t
terra foo()
    return a
end
foo()
